Attempting to fix caret alignment

--- a/assets/styles/homepage.css
+++ b/assets/styles/homepage.css
@@ -74,7 +74,6 @@ p {
 
 .nav-item .caret {
 	margin-left: 5px;
-	padding-bottom: 5px;
 	font-size: 12px;
 	display: inline-block;
 }
